Major cleanup: Remove duplicate files and unused code
- Removed 6 duplicate implementations (254KB of redundant code)
  - 2 duplicate enhanced_roi_calculator versions
  - 2 duplicate proposal_generator versions
  - 1 duplicate assessment_tool version
  - 1 unused simple roi_calculator
- Removed unused/debug files:
  - debug_utilities.py, benchmarks, old interfaces
  - edge case handlers and test data
- Removed backup files (.bak) and logs
- Cleaned Python cache files (__pycache__, *.pyc)
- Updated .gitignore to prevent these issues
- Kept only actively used implementations

Result: Cleaner, more maintainable codebase with 18 fewer files

--- a/.gitignore
+++ b/.gitignore
@@ -135,5 +135,17 @@ models/*.h5
 # Alembic local config
 alembic.ini.local
 
+# Backup files
+*.bak
+*-backup.*
+*.backup
+
+# Debug and benchmark files
+*debug*.py
+*benchmark*.py
+
+# Optimization results
+optimization_results.json
+
 # Keep empty directories
 !**/.gitkeep
